maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: ')' expected but ';' found.
    if(!murNord)(forward();{
                          ^PledgeMaze:8: error: ';' expected but 'else' found.
    else{
    ^PledgeMaze:18: error: expected class or object definition
def suivremur(){
^PledgeMaze:24: error: expected class or object definition
def mur(){
^PledgeMaze:33: error: Unmatched closing brace '}' ignored here
}
^